# knights_tour_rust

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
